--- a/src/pages/tofaacademy/tofaacademy.css
+++ b/src/pages/tofaacademy/tofaacademy.css
@@ -1,3 +1,16 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container-fluid{
+  width: 100%;
+  min-height: 100vh;
+
+  overflow: hidden;
+}
+
 
 
 .headacademy{
@@ -164,6 +177,8 @@ top: 0px;
 
 
 .goalstext{
+  width: 100% !important;
+  
 height: 1161px;
 left: 0px;
 top: 1484px;
