--- a/src/pages/MarketPlace/login/login.css
+++ b/src/pages/MarketPlace/login/login.css
@@ -6,6 +6,11 @@
 #buyer-page{
 	height: 100vh;
 }
+.section-body{
+	margin: 0 !important;
+	padding: 0 !important;
+	 
+}
 
 .map-img {
 	height: 100vh;
