--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,3 +1,9 @@
+.container{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .menuitems {
   display: flex;
   list-style-type: none;
@@ -14,10 +20,16 @@
 
 .content {
   position: relative;
+  
+
+
+
+
 }
 
 .bgbody {
   position: absolute;
+
 }
 
 .arrange {
@@ -30,6 +42,22 @@
   width: 100%;
   text-align: center;
   font-size: 18px;
+
+height: 293.0000305175781px;
+
+top: 294px;
+
+
+}
+
+@media screen and (max-width:992px) {
+  .centerr{
+    align-items: center;
+  
+    height: 293.0000305175781px;
+    
+  }
+  
 }
 
 .descrip {
@@ -228,6 +256,14 @@
 .story {
   padding-left: 15rem;
   padding-right: 15rem;
+}
+
+.paragraph {
+  display: flex;
+flex-direction: column;
+align-items: center;
+padding: 0 12rem;
+gap: 32px;
 }
 .date {
   font-family: Mulish;
